@@ -1,5 +1,8 @@
 2010-08-27  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* retoglob.c: Fail if the generated glob contains more than
+	two asterisks.  Fixes [Expect SF Bug 3010684] (cederqvist)
+
 	* exp_main_sub.c: add return to silence compiler warning.
 	Updated EXP_VERSION to 5.45.0
 
